Fixed horizontal scroll bar

--- a/plugins/latiendadeljo/styles.css
+++ b/plugins/latiendadeljo/styles.css
@@ -1,30 +1,43 @@
-div.jo-categories-main {
+div.jo-categories-container {
+  width: 100%;
+  display: flex;
+  align-items: flex-start;
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
+}
+
+div.jo-categories-container div.jo-categories-main {
   display: flex;
   flex-direction: row;
-  justify-content: center;
   flex-wrap: wrap;
-  width: 100%;
+  margin: auto;
 }
 
-div.jo-categories-main a.cat-link{
-  text-align: center;
-  margin-left: 1rem;
-}
-
-div.jo-categories-main a.cat-link div.category{
-  height: 150px;
-  width: 150px;
-
-  background-position: center;
-  background-size: cover;
-
+div.jo-categories-container div.jo-categories-main div.category {
   display: flex;
   align-items: center;
 
   margin-bottom: 1rem;
 }
 
-div.jo-categories-main a.cat-link span.name{
+div.jo-categories-container div.jo-categories-main div.category a.cat-link {
+  text-align: center;
+  margin-left: 1rem;
+}
+
+div.jo-categories-container div.jo-categories-main div.category:last-child {
+  margin-right: 1rem;
+}
+
+div.jo-categories-container div.jo-categories-main div.category a.cat-link div.img{
+  height: 150px;
+  width: 150px;
+
+  background-position: center;
+  background-size: cover;
+}
+
+div.jo-categories-container div.jo-categories-main a.cat-link span.name{
   background-color: rgba(68, 101, 84, 0.75);
   border: 0px;
   border-radius: 20px;
@@ -35,19 +48,17 @@ div.jo-categories-main a.cat-link span.name{
 }
 
 @media(max-width: 960px) {
-  div.jo-categories-main {
+  div.jo-categories-container div.jo-categories-main {
     flex-wrap: unset;
-    overflow-x: auto;
-    -webkit-overflow-scrolling: touch;
   }
 
-  div.jo-categories-main a.cat-link div.category{
+  div.jo-categories-container div.jo-categories-main div.category a.cat-link div.img {
     width: 100px;
     height: 100px;
     margin-bottom: 0.2rem;
   }
 
-  div.jo-categories-main a.cat-link span.name{
+  div.jo-categories-container div.jo-categories-main a.cat-link span.name{
     font-size: 0.8rem;
   }
 }
